# Vision550

./: .gitignore  LICENSE  README.md
backend/: README.md  assistant.py  main.py  pyproject.toml  requirements.txt
backend/config/: config.yaml
backend/vision550/: app.py  assistant.py  config_loader.py  webcam.py
frontend/: .env.template  README.md  bun.lockb  drizzle.config.ts  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/assistant/: CallAssistant.tsx  Camera.tsx  ChatHistory.tsx  page.tsx
frontend/app/components/: Footer.tsx
frontend/app/components/theme/: ThemeButton.tsx  ThemeContext.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: AuthForm.tsx  Footer.tsx  ToggleVisibilityInput.tsx
frontend/components/theme/: ThemeButton.tsx  ThemeContext.tsx
frontend/components/user/: KeyInput.tsx  User.tsx
frontend/drizzle/: 0000_numerous_nitro.sql
frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/lib/: actions.ts  auth.ts  executeaction.ts  schema.ts
frontend/lib/db/: index.ts  schema.ts
